[gd_scene load_steps=8 format=3 uid="uid://bxe6hto0vk8fu"]

[ext_resource type="Script" uid="uid://dry1n6m67ku3q" path="res://addons/agent/ui/setting/setting.gd" id="1_c2l6f"]
[ext_resource type="PackedScene" uid="uid://c2ei06dd8phsw" path="res://addons/agent/ui/setting/setting_item_bool.tscn" id="1_ca3bj"]
[ext_resource type="PackedScene" uid="uid://jbwyo7x0ce47" path="res://addons/agent/ui/setting/setting_item_option.tscn" id="4_83qt4"]
[ext_resource type="PackedScene" uid="uid://wicqyhlygh1v" path="res://addons/agent/ui/models/supplier_option_window.tscn" id="4_k4cyc"]

[sub_resource type="LabelSettings" id="LabelSettings_83qt4"]
font_size = 20

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_c2l6f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_83qt4"]

[node name="SettingContainer" type="ScrollContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 3
script = ExtResource("1_c2l6f")

[node name="SettingPanel" type="MarginContainer" parent="."]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/margin_left = 10
theme_override_constants/margin_top = 10
theme_override_constants/margin_right = 10
theme_override_constants/margin_bottom = 10

[node name="SettingItemsContainer" type="VBoxContainer" parent="SettingPanel"]
unique_name_in_owner = true
layout_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="SettingPanel/SettingItemsContainer/MarginContainer"]
layout_mode = 2
text = "对话设置"
label_settings = SubResource("LabelSettings_83qt4")

[node name="AutoClearSetting" parent="SettingPanel/SettingItemsContainer" instance=ExtResource("1_ca3bj")]
layout_mode = 2
setting_name = "发送后自动清空"
setting_key = "auto_clear"

[node name="AutoExpandThinkSetting" parent="SettingPanel/SettingItemsContainer" instance=ExtResource("1_ca3bj")]
layout_mode = 2
setting_name = "自动展示思考内容"
setting_key = "auto_expand_think"

[node name="AutoAddFileRefSetting" parent="SettingPanel/SettingItemsContainer" instance=ExtResource("1_ca3bj")]
layout_mode = 2
setting_name = "自动添加引用的文件名称"
setting_key = "auto_add_file_ref"

[node name="SendShotCut" parent="SettingPanel/SettingItemsContainer" instance=ExtResource("4_83qt4")]
layout_mode = 2
setting_name = "输入框发送快捷键"
setting_key = "send_shortcut"

[node name="SettingNameLabel" parent="SettingPanel/SettingItemsContainer/SendShotCut" index="0"]
text = "输入框发送快捷键"

[node name="OptionButton" parent="SettingPanel/SettingItemsContainer/SendShotCut" index="1"]
tooltip_text = "选择发送快捷键"
selected = 1
item_count = 3
popup/item_0/text = "不使用快捷键"
popup/item_1/text = "Enter"
popup/item_1/id = 1
popup/item_2/text = "Ctrl + Enter"
popup/item_2/id = 2

[node name="HSeparator" type="HSeparator" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer2" type="MarginContainer" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="SettingPanel/SettingItemsContainer/MarginContainer2"]
layout_mode = 2
text = "模型设置"
label_settings = SubResource("LabelSettings_83qt4")

[node name="ModelSetting" type="VBoxContainer" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2

[node name="SupplierOptionButton" type="Button" parent="SettingPanel/SettingItemsContainer/ModelSetting"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "供应商管理"
text = "供应商管理"

[node name="SupplierList" type="VBoxContainer" parent="SettingPanel/SettingItemsContainer/ModelSetting"]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="AddSupplierButton" type="Button" parent="SettingPanel/SettingItemsContainer/ModelSetting/SupplierList"]
unique_name_in_owner = true
layout_mode = 2
theme_override_styles/focus = SubResource("StyleBoxEmpty_c2l6f")
text = "添加供应商"

[node name="HSeparator2" type="HSeparator" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2
theme_override_constants/separation = 10

[node name="MarginContainer3" type="MarginContainer" parent="SettingPanel/SettingItemsContainer"]
layout_mode = 2
theme_override_constants/margin_bottom = 12

[node name="Label" type="Label" parent="SettingPanel/SettingItemsContainer/MarginContainer3"]
layout_mode = 2
text = "角色管理"
label_settings = SubResource("LabelSettings_83qt4")

[node name="RoleList" type="VBoxContainer" parent="SettingPanel/SettingItemsContainer"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddRoleButton" type="Button" parent="SettingPanel/SettingItemsContainer/RoleList"]
unique_name_in_owner = true
layout_mode = 2
tooltip_text = "添加新的角色"
theme_override_styles/focus = SubResource("StyleBoxEmpty_83qt4")
text = "添加角色"

[node name="SupplierOptionWindow" parent="." instance=ExtResource("4_k4cyc")]
visible = false

[editable path="SettingPanel/SettingItemsContainer/SendShotCut"]
